5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1575_2897.log
== TEST (2019-03-13 13:04:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(28)
-- OUTPUT:
1428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(28)
-- EXECUTION TIME:
0.228032
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1428
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1428
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(28num)
-- ERROR:
File "XXXX", line 7
    print(28num)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(28)
-- OUTPUT:
1428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:05:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
int(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    int(print(28))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:05:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
int(print(28))
-- EXECUTION TIME:
0.30083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    int(print(28))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:06:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- EXECUTION TIME:
0.274385
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:06:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num= int(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num= int(print(28))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num= int(print(28))
-- EXECUTION TIME:
0.123777
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num= int(print(28))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num=int(print(28))
-- EXECUTION TIME:
0.143599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num=int(print(28))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num=int(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num=int(print(28))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = int(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(print(28))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = int(print(28))
-- EXECUTION TIME:
0.161548
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = int(print(28))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = input(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = input(print(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = input(print(28))
-- EXECUTION TIME:
0.176696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = input(print(28))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:07:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = int(input(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(input(28))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:07:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = int(input(28))
-- EXECUTION TIME:
0.171208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = int(input(28))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:08:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
num = int(print(28))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(print(28))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:09:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
num = int(print("28"))
-- EXECUTION TIME:
0.139444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = int(print("28"))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:09:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
num = int(print("28"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(print("28"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:09:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:14"))

# Impressao do dobro do numero
num = int(print("28"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(print("28"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:09:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:14"))

# Impressao do dobro do numero
num = int(print("28"))
-- EXECUTION TIME:
0.129396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = int(print("28"))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:09:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:14"))

# Impressao do dobro do numero
num = int(print("Digite o numero:28"))
-- EXECUTION TIME:
0.194272
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2897/main.py", line 7, in <module>
    num = int(print("Digite o numero:28"))
TypeError: int() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:09:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:14"))

# Impressao do dobro do numero
num = int(print("Digite o numero:28"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    num = int(print("Digite o numero:28"))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:11:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do mumero
print(num*2)
-- EXECUTION TIME:
0.192237
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
